--- a/src/components/SecaoContato/SecaoContato.module.css
+++ b/src/components/SecaoContato/SecaoContato.module.css
@@ -23,31 +23,38 @@
 
 .container_contatos_redes {
     max-width: 1024px;
+    width: 100%;
     margin: 0 auto;
 
     display: flex;
-    justify-content: space-around;
-}
-
-.container_contato {
-    max-width: 350px;
-    padding: 20px;
-    width: 50%;
-
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.container_redes_socias {
-    max-width: 350px;
-    padding: 20px;
-    width: 50%;
-
-    display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
     gap: 10px;
+}
+
+.container_contatos_redes h3 {
+    font-size: 24px;
+}
+
+.container_informacoes {
+    max-width: 350px;
+    padding: 20px;
+    width: 50%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.informacoes {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.texto_icon {
+    display: flex;
+    gap: 10px;
+    align-items: center;
 }
 
 .icons {
