--- a/src/components/SecaoProdutos/SecaoProdutos.module.css
+++ b/src/components/SecaoProdutos/SecaoProdutos.module.css
@@ -1,6 +1,6 @@
 .container_secao_produtos {
     width: 100%;
-    padding: 80px 20px;
+    padding: 80px 20px 40px 20px;
     display: flex;
     flex-direction: column;
     gap: 40px;
